Fix data retention executor test